--- a/example/ios/Flutter/Generated.xcconfig
+++ b/example/ios/Flutter/Generated.xcconfig
@@ -1,12 +1,14 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/arnav/Developer/flutter
-FLUTTER_APPLICATION_PATH=/Users/arnav/Downloads/flutter_plugins-tapjoy/example
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_ROOT=/Users/owner/Developer/flutter/flutter
+FLUTTER_APPLICATION_PATH=/Users/owner/flutter_plugins/example
+COCOAPODS_PARALLEL_CODE_SIGN=true
+FLUTTER_TARGET=/Users/owner/flutter_plugins/example/lib/main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build/ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
-TRACK_WIDGET_CREATION=false
+TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.packages
+PACKAGE_CONFIG=/Users/owner/flutter_plugins/example/.dart_tool/package_config.json
