--- a/tapjoy/android/gradle/wrapper/gradle-wrapper.properties
+++ b/tapjoy/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Sat Feb 12 19:18:24 PST 2022
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.1.1-bin.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.7.3-all.zip
+zipStoreBase=GRADLE_USER_HOME
