--- a/tapjoy/android/local.properties
+++ b/tapjoy/android/local.properties
@@ -1,2 +1,9 @@
-sdk.dir=/Users/arnav/Library/Android/sdk
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Sat Feb 12 19:18:08 PST 2022
+sdk.dir=/Users/owner/Library/Android/sdk
 flutter.sdk=/Users/arnav/Developer/flutter
